Bug 425325 - Imported RAW image has linear RGB color profile wrongly attached
Summary: Imported RAW image has linear RGB color profile wrongly attached
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 4.3.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-13 22:11 UTC by Dmitry Kazakov
Modified: 2020-08-14 13:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2020-08-13 22:11:56 UTC
1) Try to open any RAW image, e.g. this http://www.rawsamples.ch/raws/canon/5d/RAW_CANON_5D_ARGB.CR2
2) Choose sRGB profile in conversion settings

OBSERVED RESULT

Krita loads binary data from RAW file correctly, but attaches linear gamma profile to it

EXPECTED RESULT

Attach sRGB profile.
Comment 1 Dmitry Kazakov 2020-08-14 13:27:57 UTC
Git commit 90365ac57866bb55f8143210addd96ad3558bdf1 by Dmitry Kazakov.
Committed on 14/08/2020 at 13:27.
Pushed by dkazakov into branch 'krita/4.3'.

Fix ICC file type selector widget for the RAW import plugin

Qt uses space as a separator for filters, not semicolor

M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/dcrawsettingswidget.cpp

https://invent.kde.org/graphics/krita/commit/90365ac57866bb55f8143210addd96ad3558bdf1
Comment 2 Dmitry Kazakov 2020-08-14 13:28:05 UTC
Git commit fa805d1a732c66edf253b151a59202db5722365c by Dmitry Kazakov.
Committed on 14/08/2020 at 13:26.
Pushed by dkazakov into branch 'krita/4.3'.

Fix setting a proper color profile in RAW import plugin

The patch also activates instalation of more Elle's color profiles,
because they are used in RAW options.

The proper color space for Adobe RGB is ClayRGB-elle-V2-g22.icc,
because TRC curve for Adobe's color space is 2.2, not sRGB one.

M  +3    -0    krita/data/profiles/elles-icc-profiles/CMakeLists.txt
M  +41   -1    plugins/impex/raw/kis_raw_import.cpp

https://invent.kde.org/graphics/krita/commit/fa805d1a732c66edf253b151a59202db5722365c
Comment 3 Dmitry Kazakov 2020-08-14 13:28:17 UTC
Git commit 3aa33a38fc969f2c02d0f2242069766cd0a799e6 by Dmitry Kazakov.
Committed on 14/08/2020 at 13:28.
Pushed by dkazakov into branch 'master'.

Fix setting a proper color profile in RAW import plugin

The patch also activates instalation of more Elle's color profiles,
because they are used in RAW options.

The proper color space for Adobe RGB is ClayRGB-elle-V2-g22.icc,
because TRC curve for Adobe's color space is 2.2, not sRGB one.

M  +3    -0    krita/data/profiles/elles-icc-profiles/CMakeLists.txt
M  +41   -1    plugins/impex/raw/kis_raw_import.cpp

https://invent.kde.org/graphics/krita/commit/3aa33a38fc969f2c02d0f2242069766cd0a799e6
Comment 4 Dmitry Kazakov 2020-08-14 13:28:25 UTC
Git commit 5210f71668f04b9408b21a22b8491fcbcc6e54fd by Dmitry Kazakov.
Committed on 14/08/2020 at 13:28.
Pushed by dkazakov into branch 'master'.

Fix ICC file type selector widget for the RAW import plugin

Qt uses space as a separator for filters, not semicolor

M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/dcrawsettingswidget.cpp

https://invent.kde.org/graphics/krita/commit/5210f71668f04b9408b21a22b8491fcbcc6e54fd