Fix setting a proper color profile in RAW import plugin

The patch also activates instalation of more Elle's color profiles,
because they are used in RAW options.

The proper color space for Adobe RGB is ClayRGB-elle-V2-g22.icc,
because TRC curve for Adobe's color space is 2.2, not sRGB one.

BUG:425325